tests/compile_pass/public_headers/core_fixed_string.cpp
#include <pb/core/fixed_string.hpp>

int pb_public_header_core_fixed_string() { return 0; }
